# backend/openapi.yaml
@@ -1,5 +1,4 @@
 # backend/openapi.yaml
-# YAML file defining the OpenAPI specification for the on-chain API, used by Swagger UI at /docs
 openapi: 3.0.3
 info:
   title: CarbonManager On-Chain API
@@ -171,7 +170,7 @@ paths:
               schema:
                 type: object
                 properties:
-                  status_message:
+                  status:
                     type: string
                   account:
                     type: string
@@ -203,15 +202,19 @@ paths:
                 properties:
                   user_id:
                     type: string
+                    example: USR1
                   email_account:
                     type: string
+                    example: user@example.com
                   user_name:
                     type: string
+                    example: Alice
                   user_type:
                     type: string
                     enum: [shop, customer]
                   organization_id:
                     type: string
+                    example: ORG4
         "401":
           description: Unauthorized
         "404":
@@ -230,29 +233,13 @@ paths:
               properties:
                 organization_name:
                   type: string
-                  example: organization_name
+                  example: Lee's New Tea Shop
                 user_type:
                   type: string
-                  example: user_type
+                  example: shop
       responses:
         "200":
           description: User profile updated successfully
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  user_id:
-                    type: string
-                  email_account:
-                    type: string
-                  user_name:
-                    type: string
-                  user_type:
-                    type: string
-                    enum: [shop, customer]
-                  organization_name:
-                    type: string
         "400":
           description: Invalid input
         "401":
@@ -272,6 +259,7 @@ paths:
                 properties:
                   status_message:
                     type: string
+                    example: User deleted successfully
         "401":
           description: Unauthorized           
   /product_types:
@@ -295,8 +283,10 @@ paths:
                       properties:
                         product_type_id:
                           type: string
+                          example: PT1
                         product_type_name:
                           type: string
+                          example: Green Tea 2025
         "500":
           description: Server error
     post:
@@ -324,18 +314,25 @@ paths:
                 properties:
                   product_type_id:
                     type: string
+                    example: PT1
                   product_type_name:
                     type: string
+                    example: Green Tea 2025
                   organization_id: 
                     type: string
+                    example: ORG4
                   organization_name:
                     type: string
+                    example: Lee's Tea
                   created_at: 
                     type: string
+                    example: 2024-01-01T12:00:00Z
                   updated_at: 
                     type: string
+                    example: 2024-01-01T12:00:00Z
                   order_id:
                     type: int
+                    example: 1
 
         "400":
           description: Invalid input
@@ -364,16 +361,22 @@ paths:
                   properties:
                     product_type_id:
                       type: string
+                      example: PT1
                     product_type_name:
                       type: string
+                      example: Green Tea 2025
                     organization_id:
                       type: string
+                      example: ORG4
                     organization_name:
                       type: string
+                      example: Lee's Tea
                     created_at: 
                       type: string
+                      example: 2024-01-01T12:00:00Z
                     updated_at:
                       type: string
+                      example: 2024-01-01T12:00:00Z
           "404":
             description: Product type not found
       put:
@@ -399,17 +402,6 @@ paths:
         responses:
           "200":
             description: Product type updated successfully
-            content:
-              application/json:
-                schema:
-                  type: object
-                  properties:
-                    product_type_id:
-                      type: string   
-                    name:
-                      type: string
-                    description:
-                      type: string
           "400":
             description: Invalid input
           "401":
@@ -434,7 +426,7 @@ paths:
                 schema:
                   type: object
                   properties:
-                    status message:
+                    status:
                       type: string
                     product_type_id:
                       type: string
@@ -457,7 +449,7 @@ paths:
         - name: product_type_id
           in: path
           required: true
-          schema: { type: integer, minimum: 1 }
+          schema: { type: string, minimum: 1 }
       responses:
         "200":
           description: List of products
@@ -468,9 +460,9 @@ paths:
                 items:
                   type: object
                   properties:
-                    id:
-                      type: integer
-                    name:
+                    product_id:
+                      type: string
+                    product_name:
                       type: string
     post:
       summary: Create a new product under a product type
@@ -500,10 +492,12 @@ paths:
               schema:
                 type: object
                 properties:
-                  id:
-                    type: integer
-                  name:
+                  product_id:
                     type: string
+                    example: PRD1
+                  product_name:
+                    type: string
+                    example: Green Tea Batch 
         "400":
           description: Invalid input
         "401":
@@ -522,11 +516,11 @@ paths:
         - name: product_type_id
           in: path
           required: true
-          schema: { type: integer, minimum: 1 }
+          schema: { type: string, minimum: 1 }
         - name: product_id
           in: path
           required: true
-          schema: { type: integer, minimum: 1 }     
+          schema: { type: string, minimum: 1 }     
       responses:
         "200":
           description: Product details
@@ -535,12 +529,26 @@ paths:
               schema:   
                 type: object
                 properties:
-                  id:
+                  product_id:
                     type: integer
-                  name:
+                    example: PD1
+                  product_name:
                     type: string
-                  product_type_id:
-                    type: integer
+                    example: Green Tea Batch
+                  serial_number:
+                    type: string
+                  total_emission:
+                    type: number
+                    format: float
+                    example: 123.45
+                  created_at:
+                    type: string
+                    example: 2024-01-01T12:00:00Z
+                  ended_at:
+                    type: string
+                    example: 2024-01-31T12:00:00Z
+                  code:
+                    type: string
         "404":
           description: Product not found
     put:    
@@ -552,11 +560,11 @@ paths:
         - name: product_type_id
           in: path
           required: true
-          schema: { type: integer, minimum: 1 }
+          schema: { type: string, minimum: 1 }
         - name: product_id
           in: path
           required: true
-          schema: { type: integer, minimum: 1 }
+          schema: { type: string, minimum: 1 }
       requestBody:      
         required: true
         content:
@@ -564,23 +572,12 @@ paths:
             schema:
               type: object
               properties:
-                name:
+                new_product_name:
                   type: string
-                  example: Updated Batch #12345
+                  example: Updated Batch 
       responses:
         "200":
           description: Product updated successfully
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  id:
-                    type: integer     
-                  name:
-                    type: string
-                  product_type_id:
-                    type: integer
         "400":
           description: Invalid input
         "401":
@@ -596,11 +593,11 @@ paths:
         - name: product_type_id  
           in: path
           required: true
-          schema: { type: integer, minimum: 1 }  
+          schema: { type: string, minimum: 1 }  
         - name: product_id
           in: path
           required: true        
-          schema: { type: integer, minimum: 1 }
+          schema: { type: string, minimum: 1 }
       responses:
         "200":
           description: Product deleted successfully
@@ -609,7 +606,7 @@ paths:
               schema:
                 type: object
                 properties:
-                  message:
+                  status_message:
                     type: string
         "401":
           description: Unauthorized
@@ -625,7 +622,7 @@ paths:
         - name: product_id
           in: path
           required: true
-          schema: { type: integer, minimum: 1 }
+          schema: { type: string, minimum: 1 }
         - name: stage_id
           in: path
           required: true
@@ -642,9 +639,11 @@ paths:
                   properties:
                     step_id:
                       type: string
-                    tag:
+                    step_name:
                       type: string
-                    order:
+                    tag_id:
+                      type: string
+                    sort_order:
                       type: integer
         "404":
           description: Product not found
@@ -666,18 +665,21 @@ paths:
             schema:
               type: object
               properties:
-                stage_id:
+                step_id:
                   type: string
-                  example: raw
+                  example: STP1
+                step_name: 
+                  type: string
+                  example: 原料採購
                 tag_id:
                   type: string
-                  example: 1
+                  example: TAG1
                 sort_order:
                   type: integer
                   example: 1
-                name: 
+                created_at:
                   type: string
-                  example: 原料採購
+                  example: 2024-01-01T12:00:00Z
       responses:
         "201":
           description: Stage order created successfully
@@ -687,12 +689,12 @@ paths:
                 type: object
                 properties:
                   step_id:
-                    type: integer
+                    type: string
                   order:
                     type: integer
-                  tag:
+                  tag_id:
                     type: string
-                  stage:
+                  stage_id:
                     type: string
         "400":
           description: Invalid input
@@ -780,7 +782,7 @@ paths:
                 properties:
                   emission_id:
                     type: string
-                  message:
+                  status_message:
                     type: string
   /products/{product_id}/emissions/summary:
     get:
@@ -833,16 +835,26 @@ paths:
                   properties:
                     emission_id:
                       type: string
-                    product_type_id:
+                    emission_name:
                       type: string
-                    product_id:
+                    stage_id:
                       type: string
-                    amount:
+                    step_id:
+                      type: string
+                    tag_id:
+                      type: string
+                    factor_id:
+                      type: integer
+                    quantity:
                       type: number
                       format: float
-                    timestamp:
+                    emission_amount:
+                      type: number
+                      format: float
+                    created_at:
                       type: string
-                      format: date-time
+                    created_by:
+                      type: string
   /emissions/{emission_id}:
     get:
       summary: Get an emission by ID
@@ -862,14 +874,30 @@ paths:
               schema:   
                 type: object
                 properties:
-                  id:
+                  emission_id:
+                    type: string
+                  emission_name:
+                    type: string
+                  stage_id:
+                    type: string
+                  step_id:
+                    type: string
+                  tag_id:
+                    type: string
+                  factor_id:
                     type: integer
-                  amount:
+                  quantity:
                     type: number
                     format: float
-                  timestamp:
+                  emission_amount:
+                    type: number
+                    format: float
+                  unit_target_amount:
+                    type: number
+                  created_at:
                     type: string
-                    format: date-time
+                  created_by:
+                    type: string
         "404":
           description: Emission not found
     put:
@@ -896,13 +924,6 @@ paths:
       responses:
         "200":
           description: Emission updated successfully
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  message:
-                    type: string
         "400":
           description: Invalid input
         "401":
@@ -927,7 +948,7 @@ paths:
               schema:
                 type: object
                 properties:
-                  message:
+                  status_message:
                     type: string
         "401":
           description: Unauthorized
@@ -1002,7 +1023,7 @@ paths:
                       properties:
                         factor_id:
                           type: string
-                        name:
+                        factor_name:
                           type: string
                         coefficient:
                           type: number
